<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="Menu">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/name_home" />
                <item
                    android:id="@+id/nav_random"
                    android:icon="@drawable/ic_random"
                    android:title="@string/name_random" />
            </menu>
        </item>

        <item android:title="@string/name_methods">
            <menu>
                <item
                    android:id="@+id/nav_aeropress"
                    android:icon="@drawable/ic_aeropress"
                    android:title="@string/name_aeropress" />
                <item
                    android:id="@+id/nav_chemex"
                    android:icon="@drawable/ic_chemex"
                    android:title="@string/name_chemex" />
                <item
                    android:id="@+id/nav_french_press"
                    android:icon="@drawable/ic_french_press"
                    android:title="@string/name_french_press" />
                <item
                    android:id="@+id/nav_kalita"
                    android:icon="@drawable/ic_kalita"
                    android:title="@string/name_kalita" />
                <item
                    android:id="@+id/nav_v60"
                    android:icon="@drawable/ic_v60"
                    android:title="@string/name_v60" />
                <item
                    android:id="@+id/nav_syphon"
                    android:icon="@drawable/ic_syphon"
                    android:title="@string/name_syphon" />
                <item
                    android:id="@+id/nav_cafetiere"
                    android:icon="@drawable/ic_cafetiere"
                    android:title="@string/name_cafetiere" />
            </menu>
        </item>

    </group>
</menu>