<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="#f3f3f3">

    <GridLayout
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_margin="10dp"
        android:background="#f3f3f3">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_aeropress"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/aeropress"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_aeropress"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_chemex"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/chemex"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_chemex"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_v60"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/v60"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_v60"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_kalita"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/kalita"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_kalita"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_french_press"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/french_press"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_french_press"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_syphon"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/syphon"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_syphon"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_cafetiere"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/cafetiere"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_cafetiere"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_random"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/random"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_random"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>